--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -82,6 +82,7 @@
 										<form th:action="@{'/carts/' + ${cart.id}}"th:method="post">
 											<input type="hidden" name="_method" value="put">
 											<input type="number" th:name="count" th:value="${cart.cartCount}" min="1">
+											<p class="mt-3" th:if="${not cart.underStock}" style="color: red;">재고 수량을 초과하였습니다</p>
 										</form>
 									</td>
 									<td class="product-total" th:text="${cart.totalProductPrice} + '원'"></td>
