--- a/src/main/resources/templates/fragments/bodyHeader.html
+++ b/src/main/resources/templates/fragments/bodyHeader.html
@@ -20,15 +20,15 @@
               <ul>
                 <li><a href="#" th:href="@{/products/admin/{id} (id=${session.id})}">Products</a></li>
                 <li><a href="/">Orders</a></li>
-                <li><a href="users">Members</a></li>
+                <li><a href="/users">Members</a></li>
                 <li><a href="/">Q&A</a></li>
                 <li><a href="/">Review</a></li>
                 <li>
                   <div class="header-icons">
-                    <a class="shopping-cart" th:if="${session.loginUser == null}" href="login"><i class="far fa-heart"></i></a>
-                    <a class="shopping-cart" th:if="${session.loginUser != null}" href="#" th:href="@{users/{id} (id=${session.id})}"><i class="far fa-heart"></i></a>
+                    <a class="shopping-cart" th:if="${session.loginUser == null}" href="/login"><i class="far fa-heart"></i></a>
+                    <a class="shopping-cart" th:if="${session.loginUser != null}" href="#" th:href="@{/users/{id} (id=${session.id})}"><i class="far fa-heart"></i></a>
                     <a class="mobile-hide search-bar-icon" href="#"><i class="fas fa-search"></i></a>
-                    <a th:if="${session.loginUser == null}" href="login">Login</a>
+                    <a th:if="${session.loginUser == null}" href="/login">Login</a>
                     <a th:if="${session.loginUser != null}" href="http://localhost:8080/logout">Logout</a>
                   </div>
                 </li>
@@ -44,21 +44,21 @@
                 <li><a href="#">goods-review</a>
                   <ul class="sub-menu">
                     <li><a href="review.html">review</a></li>
-                    <li><a href="">Shop</a></li>
+                    <li><a href="#">Shop</a></li>
                   </ul>
                 </li>
-                <li><a href="products">신상품</a>
+                <li><a href="/products">신상품</a>
                 </li>
-                <li><a href="products">베스트</a></li>
-                <li><a href="products">특가/혜택</a>
+                <li><a href="/products">베스트</a></li>
+                <li><a href="/products">특가/혜택</a>
                 </li>
                 <li>
                   <div class="header-icons">
-                    <a class="shopping-cart" th:if="${session.loginUser == null}" href="login"><i class="far fa-heart"></i></a>
+                    <a class="shopping-cart" th:if="${session.loginUser == null}" href="/login"><i class="far fa-heart"></i></a>
                     <a class="shopping-cart" th:unless="${session.loginUser == null}" href="#" th:href="@{/users/{id} (id=${session.id})}"><i class="far fa-heart"></i></a>
                     <a class="shopping-cart" href="/carts"><i class="fas fa-shopping-cart"></i></a>
                     <a class="mobile-hide search-bar-icon" href="#"><i class="fas fa-search"></i></a>
-                    <a th:if="${session.loginUser == null}" href="login">Login</a>
+                    <a th:if="${session.loginUser == null}" href="/login">Login</a>
                     <a th:unless="${session.loginUser == null}" href="http://localhost:8080/logout">Logout</a>
                   </div>
                 </li>
