--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -17,28 +17,8 @@
 	<!-- end header -->
 
 	<!-- search area -->
-	<div class="search-area">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-12">
-					<span class="close-btn"><i class="fas fa-window-close"></i></span>
-					<div class="search-bar">
-						<div class="search-bar-tablecell">
-							<h3>Search For:</h3>
-							<form action="/products" method="get" id="searchForm">
-								<!--input type="hidden" name="page" value="1">
-								<input class = "form-control" name="Keywords" th:value = ${pageRequestDTO.keyword}-->
-								<button type="submit">Search <i class="fas fa-search"></i></button>
-							</form>
-
-
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- end search arewa -->
+	<div th:replace="fragments/searchProduct :: searchProduct"/>
+	<!-- end search area -->
 	
 	<!-- breadcrumb-section -->
 	<div class="breadcrumb-section breadcrumb-bg">
