--- a/src/main/resources/templates/admin/products.html
+++ b/src/main/resources/templates/admin/products.html
@@ -54,7 +54,7 @@
         <!-- 상품 등록 페이지 이동 버튼 -->
         <div class="cart-buttons" style="text-align: center; float: right;">
             <a href="/products/admin" class="boxed-btn btn-lg black">+</a>
-        </div><br>
+        </div><br><br><br><br>
 
         <!-- 전체 상품 조회 시작  -->
         <div>
