--- a/src/main/resources/templates/fragments/bodyHeader.html
+++ b/src/main/resources/templates/fragments/bodyHeader.html
@@ -59,7 +59,7 @@
                     <a class="shopping-cart" href="/carts"><i class="fas fa-shopping-cart"></i></a>
                     <a class="mobile-hide search-bar-icon" href="#"><i class="fas fa-search"></i></a>
                     <a th:if="${session.loginUser == null}" href="/login">Login</a>
-                    <a th:unless="${session.loginUser == null}" href="http://localhost:8080/logout">Logout</a>
+                    <a th:unless="${session.loginUser == null}" href="/logout">Logout</a>
                   </div>
                 </li>
               </ul>
