--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -75,7 +75,7 @@
 											<button style="border: none; background-color: transparent"><i class="far fa-window-close"></i></button>
 										</form>
 									</td>
-									<td class="product-image"><img th:src="${cart.productImg}" alt=""></td>
+									<td class="product-image"><a th:href="@{'/single-product?id=' + ${cart.productId}}"><img th:src="${cart.productImg}" alt=""></a></td>
 									<td class="product-name" th:text="${cart.name}"></td>
 									<td class="product-price" th:text="${cart.price} + '원'"></td>
 									<td class="product-quantity">
@@ -120,7 +120,7 @@
 							</tbody>
 						</table>
 						<div class="cart-buttons" style="text-align: center;">
-							<a href="order" class="boxed-btn btn-lg black">주문하기</a>
+							<a href="orders" class="boxed-btn btn-lg black">주문하기</a>
 						</div>
 					</div>
 				</div>
