--- a/src/main/resources/templates/single-product.html
+++ b/src/main/resources/templates/single-product.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/header :: header" />
+<head th:replace="fragments/header :: header"/>
 <style>
 	/*tab css*/
 	.tab{float:left; width:900px; }
@@ -13,6 +13,7 @@
 	.tabnav li a:hover,
 	.tabnav li a.active{background:#fff; color:#7ea21e; }
 	.tabcontent{padding: 20px; height:244px; border:1px solid #ddd; border-top:none;}
+
 </style>
 <body>
 
@@ -117,16 +118,12 @@
       </div>
       <div class="modal-body">
         <div class="form-group">
-          <label>Reviewer ID</label>
-          <input type="text" class="form-control" name="loginId">
-        </div>
-        <div class="form-group">
-          <label>Grade <span class="grade"></span></label>
+          <label>Star <span class="grade"></span></label>
           <div class='starrr'></div>
         </div>
         <div class="form-group">
           <label>Review Text</label>
-          <input type="text" class="form-control" name="text" placeholder="상품 리뷰 작성">
+          <input type="text" class="form-control" name="contents" placeholder="상품 리뷰 작성">
         </div>
       </div>
       <div class="modal-footer">
@@ -159,15 +156,16 @@
   </div>
 </div>
 <script src="assets/js/jquery-1.11.3.min.js"></script>
-<script  src="assets/js/starrr.js"></script>
+<script src="assets/js/starrr.js"></script>
 <link href="assets/css/starrr.css" rel="stylesheet">
-<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css">
+<link rel="stylesheet"
+      href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css">
 
 <script>
   $(document).ready(function(e) {
 
                 var star = 0;
-                var id = [[${dto.id}]];
+                var pId = [[${dto.id}]];
 
                 $('.starrr').starrr({
                     rating: star,
@@ -179,15 +177,14 @@
                     }
                 });
 
-                //$(".reviewModal").modal("show"); //미리 보기용
+
                 var reviewModal = $(".reviewModal");
-                var inputLoginId = $('input[name="loginId"]');
-                var inputText = $('input[name="text"]');
+                var inputContents = $('input[name="contents"]');
 
 
                 $(".addReviewBtn").click(function () {
-                    inputLoginId.val("");
-                    inputText.val("");
+
+                    inputContents.val("");
 
                     $(".removeBtn ,  .modifyBtn").hide();
                     $(".reviewSaveBtn").show();
@@ -198,12 +195,12 @@
 
                  $('.reviewSaveBtn').click(function() {
 
-                    var data = {id:id, star:star, text:inputText.val(), loginId:inputLoginId.val() };
+                    var data = {pId:pId, star:star, contents:inputContents.val()};
 
                     console.log(data);
 
                     $.ajax({
-                        url:'/reviews/'+id,
+                        url:'/products/'+pId +'/reviews',
                         type:"POST",
                         data:JSON.stringify(data),
                         contentType:"application/json; charset=utf-8",
@@ -218,7 +215,113 @@
                     reviewModal.modal('hide');
 
                 });
+
+                //페이지가 열리면 바로 리뷰 데이터들을 가져와서 사용한다.
+                function getMovieReviews() {
+
+                    function formatTime(str){
+                        var date = new Date(str);
+
+                        return date.getFullYear() + '-' +
+                            (date.getMonth() + 1) + '-' +
+                            date.getDate() + ' ' +
+                            date.getHours() + ':' +
+                            date.getMinutes();
+                    }
+
+                    $.getJSON("/products/"+ pId +"/reviews", function(arr){
+                        var str ="";
+
+                        $.each(arr, function(idx, review){
+
+                            console.log(review);
+
+                            str += '    <tr class="card-body" data-id='+review.id+' data-loginId='+review.loginId+'>';
+                            str += '    <td class="card-title">'+review.contents+'</td>';
+                            str += '    <td class="card-subtitle mb-2 text-muted1">'+ review.star+'</td>';
+                            str += '    <td class="card-subtitle mb-2 text-muted">'+review.name+'</td>';
+                            str += '    <td class="card-text">'+ formatTime(review.regDate) +'</td>';
+                            str += '    </tr>';
+                        });
+
+                        $(".reviewList").html(str);
+                    });
+                }
+
+                getMovieReviews();
+
+                 //modify reveiw
+
+                var id;
+
+                $(".reviewList").on("click", ".card-title", function() {
+
+                    $(".reviewSaveBtn").hide();
+                    $(".removeBtn , .modifyBtn").show();
+
+
+                    var targetReview = $(this);
+
+                    id = targetReview.data("id");
+                    console.log("id: "+ id);
+
+                    inputContents.val(targetReview.find('.card-title').clone().children().remove().end().text());
+
+                    var star = targetReview.find('.card-subtitle mb-2 text-muted1').html();
+                    $(".starrr a:nth-child("+star+")").trigger('click');
+
+                    $('.reviewModal').modal('show');
+                });
+
+
+                $(".modifyBtn").on("click", function(){
+
+                    var data = {id: id, pId:pId, star:star, contents:inputContents.val()};
+
+                    console.log(data);
+
+                    $.ajax({
+                        url:'/products/'+pId +'/reviews/'+ id,
+                        type:"PUT",
+                        data:JSON.stringify(data),
+                        contentType:"application/json; charset=utf-8",
+                        dataType:"text",
+                        success: function(result){
+
+                            console.log("result: " + result);
+
+                            self.location.reload();
+
+                        }
+                    })
+                    reviewModal.modal('hide');
+                });
+
+                $(".removeBtn").on("click", function(){
+
+                    var data = {id: id};
+
+                    console.log(data);
+
+                    $.ajax({
+                        url:'/products/'+pId +'/reviews/'+ id ,
+                        type:"DELETE",
+                        contentType:"application/json; charset=utf-8",
+                        dataType:"text",
+                        success: function(result){
+
+                            console.log("result: " + result);
+
+                            self.location.reload();
+
+                        }
+                    })
+                    reviewModal.modal('hide');
+                });
+
+
             });
+
 
 
 </script>
@@ -226,217 +329,136 @@
 
 <!-- more products -->
 
-	<div class="more-products mb-150">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-8 offset-lg-2 text-center">
-					<div class="section-title">	
-						<h3><span class="orange-text">Related</span> Products</h3>
-					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-lg-4 col-md-6 text-center">
-					<div class="single-product-item">
-						<div class="product-image">
-							<a href="single-product.html"><img src="assets/img/products/product-img-1.jpg" alt=""></a>
-						</div>
-						<h3>Strawberry</h3>
-						<p class="product-price"><span>Per Kg</span> 85$ </p>
-						<a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-6 text-center">
-					<div class="single-product-item">
-						<div class="product-image">
-							<a href="single-product.html"><img src="assets/img/products/product-img-2.jpg" alt=""></a>
-						</div>
-						<h3>Berry</h3>
-						<p class="product-price"><span>Per Kg</span> 70$ </p>
-						<a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-6 offset-lg-0 offset-md-3 text-center">
-					<div class="single-product-item">
-						<div class="product-image">
-							<a href="single-product.html"><img src="assets/img/products/product-img-3.jpg" alt=""></a>
-						</div>
-						<h3>Lemon</h3>
-						<p class="product-price"><span>Per Kg</span> 35$ </p>
-						<a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
-					</div>
-				</div>
-			</div>
-
-			<!--게시판 모음 -->
-			<div class="row">
-				<div class="tab">
-					<ul class="tabnav">
-						<li><a href="#goods-review">후기</a></li>
-						<li><a href="#goods-question">문의</a></li>
-					</ul>
-					<div class="tabcontent">
-						<div class="goods-review" id="goods-review">
-							<div class="container">
-								<div class="row">
-									<div class="col-lg-8 col-md-12">
-										<div class="cart-table-wrap">
-											<table class="cart-table">
-												<thead class="cart-table-head">
-												<tr class="table-head-row">
-													<th class="product-image">번호</th>
-													<th class="product-name">제목</th>
-													<th class="product-price">작성자</th>
-													<th class="product-quantity">작성일</th>
-													<th class="product-total">도움</th>
-													<th>조회</th>
-												</tr>
-												</thead>
-												<tbody>
-												<tr class="table-body-row">
-													<td class="product-name">1</td>
-													<td class="product-price">1</td>
-													<td class="product-quantity">1</td>
-													<td class="product-total">1</td>
-													<td>1</td>
-													<td>1</td>
-												</tr>
-												<tr class="table-body-row">
-													<td class="product-name">1</td>
-													<td class="product-price">1</td>
-													<td class="product-quantity">1</td>
-													<td class="product-total">1</td>
-													<td>1</td>
-													<td>1</td>
-												</tr>
-												<tr class="table-body-row">
-													<td class="product-name">1</td>
-													<td class="product-price">1</td>
-													<td class="product-quantity">1</td>
-													<td class="product-total">1</td>
-													<td>1</td>
-													<td>1</td>
-												</tr>
-												</tbody>
-											</table>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="goods-question" id="goods-question">
-							<div class="container">
-								<div class="row">
-									<div class="col-lg-8 col-md-12">
-										<!-- 문의 등록 페이지 이동 버튼 -->
-										<div class="cart-buttons" style="text-align: center; float: right;">
-											<a href="#" th:href="@{/products/{id}/questions (id=${dto.id})}" class="boxed-btn btn-lg black">+</a>
-										</div><br><br>
-
-										<div>
-											<table class="cart-table">
-												<thead>
-												<tr>
-													<th>번호</th>
-													<th>카테고리</th>
-													<th>작성자</th>
-													<th>내용</th>
-													<th>작성 날짜</th>
-												</tr>
-												</thead>
-												<tbody th:each="question : ${questions}">
-												<tr>
-													<td th:text="${question.id}" th:onclick="|location.href='@{/questions/{id} (id=${question.id})}'|"></td>
-													<td th:text="${question.category}"></td>
-													<td th:text="${question.user.loginId}"></td>
-													<td th:text="${question.contents}"></td>
-													<td th:text="${#temporals.format(question.date, 'yyyy-MM-dd HH:mm:ss')}"></td>
-													<!--								<td th:if="${question.secret == 'secret'}" th:text="비밀 글입니다."></td>-->
-													<!--								<td th:unless="${question.secret == 'secret'}" th:text="${question.contents}"></td>-->
-												</tr>
-												<tr th:each="answer : ${question.answers}">
-													<td th:text="|Re: ${answer.contents}|" th:onclick="|location.href='@{/questions/{id} (id=${question.id})}'|"></td>
-												</tr>
-												</tbody>
-											</table>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- end more products -->
-
-
-
-
-<!--게시판 모음 -->
-<ul>
-  <li>
-    <button type="button" class="btn btn-primary">
-      Review Count <span class="badge badge-light">[[${dto.reviewCnt}]]</span>
-    </button>
-    <button type="button" class="btn btn-info addReviewBtn">
-      Review Register
-    </button>
-    <div class="list-group reviewList">
-
-    </div>
-    <a href="#" th:href="@{/products/{id}/questions (id=${dto.id})}">문의</a>
-  </li>
-</ul>
-<!--div class="goods-review">
+<div class="more-products mb-150">
   <div class="container">
     <div class="row">
-      <div class="col-lg-8 col-md-12">
-        <div class="cart-table-wrap">
-          <table class="cart-table">
-            <thead class="cart-table-head">
-              <tr class="table-head-row">
-                <th class="product-image">번호</th>
-                <th class="product-name">제목</th>
-                <th class="product-price">작성자</th>
-                <th class="product-quantity">작성일</th>
-                <th class="product-total">도움</th>
-                <th>조회</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr class="table-body-row">
-                <td class="product-name">1</td>
-                <td class="product-price">1</td>
-                <td class="product-quantity">1</td>
-                <td class="product-total">1</td>
-                <td>1</td>
-                <td>1</td>
-              </tr>
-              <tr class="table-body-row">
-                <td class="product-name">1</td>
-                <td class="product-price">1</td>
-                <td class="product-quantity">1</td>
-                <td class="product-total">1</td>
-                <td>1</td>
-                <td>1</td>
-              </tr>
-              <tr class="table-body-row">
-                <td class="product-name">1</td>
-                <td class="product-price">1</td>
-                <td class="product-quantity">1</td>
-                <td class="product-total">1</td>
-                <td>1</td>
-                <td>1</td>
-              </tr>
-            </tbody>
-          </table>
+      <div class="col-lg-8 offset-lg-2 text-center">
+        <div class="section-title">
+          <h3><span class="orange-text">Related</span> Products</h3>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-4 col-md-6 text-center">
+        <div class="single-product-item">
+          <div class="product-image">
+            <a href="single-product.html"><img src="assets/img/products/product-img-1.jpg"
+                                               alt=""></a>
+          </div>
+          <h3>Strawberry</h3>
+          <p class="product-price"><span>Per Kg</span> 85$ </p>
+          <a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-6 text-center">
+        <div class="single-product-item">
+          <div class="product-image">
+            <a href="single-product.html"><img src="assets/img/products/product-img-2.jpg"
+                                               alt=""></a>
+          </div>
+          <h3>Berry</h3>
+          <p class="product-price"><span>Per Kg</span> 70$ </p>
+          <a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-6 offset-lg-0 offset-md-3 text-center">
+        <div class="single-product-item">
+          <div class="product-image">
+            <a href="single-product.html"><img src="assets/img/products/product-img-3.jpg"
+                                               alt=""></a>
+          </div>
+          <h3>Lemon</h3>
+          <p class="product-price"><span>Per Kg</span> 35$ </p>
+          <a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
+        </div>
+      </div>
+    </div>
+
+    <!--게시판 모음 -->
+    <div class="row">
+      <div class="tab">
+        <ul class="tabnav">
+          <li><a href="#goods-review">후기 [[${dto.reviewCnt}]]</a></li>
+          <li><a href="#goods-question">문의</a></li>
+        </ul>
+        <div class="tabcontent">
+          <div class="goods-review" id="goods-review">
+            <div class="container">
+              <div class="row">
+                <div class="col-lg-8 col-md-12">
+                  <button type="button" class="btn btn-info addReviewBtn"
+                          style="text-align: center; float: right;">
+                    Review Register
+                  </button>
+                  <table class="cart-table">
+                    <thead>
+                    <tr>
+                      <th>내용</th>
+                      <th>별점</th>
+                      <th>작성자</th>
+                      <th>작성 날짜</th>
+                    </tr>
+                    </thead>
+                    <tbody class="list-group reviewList">
+
+                    </tbody>
+                  </table>
+
+
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="goods-question" id="goods-question">
+            <div class="container">
+              <div class="row">
+                <div class="col-lg-8 col-md-12">
+                  <!-- 문의 등록 페이지 이동 버튼 -->
+                  <div class="cart-buttons" style="text-align: center; float: right;">
+                    <a href="#" th:href="@{/products/{id}/questions (id=${dto.id})}"
+                       class="boxed-btn btn-lg black">+</a>
+                  </div>
+                  <br><br>
+
+                  <div>
+                    <table class="cart-table">
+                      <thead>
+                      <tr>
+                        <th>번호</th>
+                        <th>카테고리</th>
+                        <th>작성자</th>
+                        <th>내용</th>
+                        <th>작성 날짜</th>
+                      </tr>
+                      </thead>
+                      <tbody th:each="question : ${questions}">
+                      <tr>
+                        <td th:text="${question.id}"
+                            th:onclick="|location.href='@{/questions/{id} (id=${question.id})}'|"></td>
+                        <td th:text="${question.category}"></td>
+                        <td th:text="${question.user.loginId}"></td>
+                        <td th:text="${question.contents}"></td>
+                        <td th:text="${#temporals.format(question.date, 'yyyy-MM-dd HH:mm:ss')}"></td>
+                        <!--								<td th:if="${question.secret == 'secret'}" th:text="비밀 글입니다."></td>-->
+                        <!--								<td th:unless="${question.secret == 'secret'}" th:text="${question.contents}"></td>-->
+                      </tr>
+                      <tr th:each="answer : ${question.answers}">
+                        <td th:text="|Re: ${answer.contents}|"
+                            th:onclick="|location.href='@{/questions/{id} (id=${question.id})}'|"></td>
+                      </tr>
+                      </tbody>
+                    </table>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div -->
+</div>
+<!-- end more products -->
 
 
 <!-- footer -->
@@ -472,6 +494,7 @@
 			return false;
 		}).filter(':eq(0)').click();
 	});
+
 </script>
 </body>
 </html>
